# Glacier-Slide

./: .gitignore  Cargo.toml  README.md  test.txt
data/levels/: 1.json  2.json
src/: board.rs  direction.rs  game.rs  game_config.rs  game_state.rs  main.rs  parser.rs  renderer.rs  solver.rs  system.rs  visual_solver.rs
src/board/: direction.rs  level_reader.rs  mod.rs  point.rs  solution.rs  solver.rs  tile.rs
src/web_server/: handlers.rs  metrics.rs  mod.rs
