[package]
name = "glacier_slide"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }

clap-num = "1.2.0"
crossterm = "0.29.0"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thousands = "0.2.0"
time-elapsed = "0.1.0"
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1"
